Established connection and passed data to mongoDB

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <main>
         <!-- By default, method of <form> is get. Hence, we can see data in URL -->
         <!-- action: shows which endpoint/API to hit on submit -->
-        <form method="post" action="">
+        <form method="post" action="/contact">
             <h1>Contact Now</h1>
             <input type="text" name="name"  id="name" placeholder="Name">
             <input type="email" name="email" id="email" placeholder="Email">
