--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <form action="/login" method="post">
-        <button type="submit">Login</button>
+    <form method="post" action="/login">
+        <h1>Login Now</h1>
+        <input type="text" name="name"  id="name" placeholder="Name">
+        <input type="email" name="email" id="email" placeholder="Email">
+        <button type="submit">Log In</button>
     </form>
 </body>
 </html>
