--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,8 +9,8 @@
 <body>
     <form method="post" action="/login">
         <h1>Login Now</h1>
-        <input type="text" name="name"  id="name" placeholder="Name">
         <input type="email" name="email" id="email" placeholder="Email">
+        <input type="password" name="password" id="password" placeholder="Password">
         <button type="submit">Log In</button>
     </form>
 </body>
