--- a/public/styles.css
+++ b/public/styles.css
@@ -52,3 +52,10 @@ button{
     cursor: pointer;
     padding: 1rem 2rem
 }
+
+.error{
+    font-family: sans-serif;
+    font-size: 0.7rem;
+    font-style: italic;
+    color: red;
+}
